--- a/paper/impl.tex
+++ b/paper/impl.tex
@@ -1,35 +1,32 @@
 \section{Implementation}
 
-NVKV is shared lib drop-in replacement for BDB.
-Describe LoC, cmplexity.
-get\_pointer stuff.
-
-what are we ignoring (due to not having bnvm)
-
+The NVKV library was implemented with about 600 lines of dense C code, including
+a 50 line header file to be used by applications. It does not implement much of
+the functionality of \bdb because that is out of scope. Much of the complexity
+of the code has to do with translating pointers. For example, the hash table
+stores not the keys themselves (since they can be arbitrary length), but
+pointers to the keys in the data address space. To translate such a pointer to
+the appropriate virtual address that the database is mapped to, it is passed
+through the function \texttt{ptr\_translate}, which adjusts it according to
+figure~\ref{fig:addrspace} and adds to it the base address of the database
+mapping. The result can be dereferenced normally, and points directly to the
+persistent data. Another added complexity is that because the virtual address
+space is an interleaving of the metadata and data spaces, the $n$th bucket
+cannot be loaded simply by adding $n$ to the base pointer for the table.
+Instead, bucket lookups must also go through the \texttt{ptr\_translate}
+function, adding to the complexity of implementing the hash table manipulation
+functions.
 
 \subsection{Consistency Mechanisms}
 
-cuckoo:
-order of lookup REALLY matters: reverse order.
+The code implements two consistency mechanisms: \texttt{persist-release} and
+transactions. Both are emulated in leu of having true BNVM. The
+\texttt{persist-release} operation is implemented as a store fence, a cache-line
+write-back (\texttt{clwb} on Intel), followed by a full fence. The result is
+that the cache-line is persisted while reordering is restricted. Transactions
+are emulated, under the assumption that each memory access takes some number of
+additional cycles when the transaction commits.
 
-
-
-
-cuckoo: each move goes from valid state to valid state with bounded
-ops. Worst case the recursive move doesn't complete: still valid.
-
-TXN may be too much overhead. instead, we can use persist-release. We do this
-with count, because if the count is off a bit, that's okay. The only time that
-happens is power fail, and we can recalculate the count after a fail if we need
-it to be perfect.
-
-
-
-Calc size of TXNs (num instruction, num of mem access). Also use Os to reduce just
-those functions.
-
-
-TXN, PERSIST\_RELEASE
 
 \subsection{Generated Transaction Code}
 
