--- a/paper/main.tex
+++ b/paper/main.tex
@@ -24,11 +24,12 @@
 
 
 
+\setlength{\columnsep}{5mm}
 
 
 \author{Daniel Bittman \\ dbittman@ucsc.edu}
-\title{NVKV: Building a KV Store for Non-Volatile Memory\\{\small CMPS278:
-Database Design and Implementation: Class Project\\\vspace{-5mm}Instructor: Shel Finkelstein}}
+\title{NVKV: Building a KV Store for Non-Volatile Memory\\{\Large CMPS278:
+Database Design and Implementation: Class Project\\\vspace{-2mm}Instructor: Shel Finkelstein}}
 
 \newcommand{\etal}{\emph{et~al.}\xspace}
 \newcommand{\bdb}{Berkeley DB\xspace}
