--- a/paper/results.tex
+++ b/paper/results.tex
@@ -26,10 +26,12 @@ Since Cuckoo hashing is heavily dependent on hash function and workload, these
 tests were performed by inserting elements with random keys and counting the
 movements done in total, averaged over many runs with different seeds.
 The comparison system is a nearly identical
-implementation of Cuckoo hashing that reinserts all elements during a rehash.
+implementation of Cuckoo hashing that reinserts all elements during a rehash
+(and all movements done during the reinsertion operations are counted against
+it).
 The error bars show standard deviation, and demonstrate that the non-reinserting
-rehashing strategy is less dependent on workload and hash function than standard
-cuckoo hashing.
+rehashing strategy is more dependent on workload and hash function than standard
+cuckoo hashing, although the overall reduction in movements has merit.
 
 \subsection{Performance}
 
@@ -43,7 +45,7 @@ cuckoo hashing.
 
 The average latency of insert and lookup operations is shown in
 Figure~\ref{fig:perf}. The operations tested are \texttt{put}, which inserts an
-element is not present, \texttt{get (present)}, which
+element that is not present, \texttt{get (present)}, which
 looks up an element that is in the database, \texttt{get (not present)}, which
 looks up an element that is \textit{not} in the database, and \texttt{get
 (hot)}, which looks up the same element repeatedly. The error bars indicate
@@ -79,16 +81,18 @@ of elements in the database for both Berkeley DB and NVKV. As is consistent with
 Figure~\ref{fig:perf}, the average insert latency of NVKV is less than Berkeley
 DB. Both have significant spikes which are caused by some rearrangement
 procedure (in the case of NVKV these correspond to the hash table expansion
-procedure).  Note that the NVKV spikes are much smaller, likely due to the
+procedure which often results in a call to \texttt{mremap}).
+Note that the NVKV spikes are much smaller, likely due to the
 relatively cheap rehashing procedure that does not require reinserting elements.
 The NVKV spikes also have a tail to the right of them where the latency remains
-significantly above the mean for a time following a hash table expansion. I
+significantly above the mean for a time following a hash table expansion. We
 expect that this is because the hash table is extremely unbalanced after the
 table expansion, resulting in a large number of collisions and movements for
 some time after the table is expanded. However, since the elements are always
 reinserted at the top level, eventually these collisions will automatically
 balance the table as more elements are inserted, amortizing the work of
-reinserting during a rehash over future inserts.
+reinserting during a rehash over future inserts without the extra code
+complexity required for doing this explicitely.
 
 
 
